[package]
name = "dracula-watch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
reqwest = { version = "0.11.9", features = ["json"]}
tokio = { version = "1.17.0", features = ["full"]}
anyhow = "1.0.53"
once_cell = "1.9.0"
serde = { version = "1.0.136", features = ["derive"]}
serde_json = "1.0.72"